--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   google_fonts: ^6.1.0
+  flutter_phosphor_icons: ^0.0.1+6
+  phosphor_flutter: ^2.0.0
+  icons_helper: ^1.2.0-nullsafety.1
 
 dev_dependencies:
   flutter_test:
