--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   flutter_phosphor_icons: ^0.0.1+6
   phosphor_flutter: ^2.0.0
   icons_helper: ^1.2.0-nullsafety.1
+  http: ^1.1.0
+  provider: ^6.0.5
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
