--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   http: ^1.1.0
   provider: ^6.0.5
   shared_preferences: ^2.2.2
+  image_picker: ^1.0.4
+  image_picker_web: ^3.1.1
+  dio: ^5.3.3
 
 dev_dependencies:
   flutter_test:
