--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   image_picker: ^1.0.4
   image_picker_web: ^3.1.1
   dio: ^5.3.3
+  file_picker: ^6.0.0
+  http_parser: ^4.0.2
 
 dev_dependencies:
   flutter_test:
