--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   dio: ^5.3.3
   file_picker: ^6.0.0
   http_parser: ^4.0.2
+  flutter_reorderable_list: ^1.3.1
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
