feat:slide_nova_version

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,9 +73,14 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - images/descricao.png
+    - images/ofertas.png
+    - images/perguntas.png
+    - images/plano.png
+    - images/relogio.png
+    - images/rodape.png
+    - images/slides.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
