--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   http_parser: ^4.0.2
   flutter_reorderable_list: ^1.3.1
   intl: ^0.18.1
+  flutter_bloc: ^8.1.3
 
 dev_dependencies:
   flutter_test:
