--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   flutter_reorderable_list: ^1.3.1
   intl: ^0.18.1
   flutter_bloc: ^8.1.3
+  dropdown_button2: ^2.3.9
 
 dev_dependencies:
   flutter_test:
