--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   intl: ^0.18.1
   flutter_bloc: ^8.1.3
   dropdown_button2: ^2.3.9
+  brasil_fields: ^1.14.1
+  flutter_masked_text2: ^0.9.1
 
 dev_dependencies:
   flutter_test:
